<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_run">

    <Button
        android:id="@+id/settings"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="339dp"
        android:layout_marginLeft="339dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="657dp"
        android:background="@drawable/settings" />

    <Button
        android:id="@+id/gps"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="341dp"
        android:layout_marginRight="341dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/gps" />

    <Button
        android:id="@+id/Go"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:background="@drawable/go" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="61dp"
        android:text="@string/prompt_username"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/full_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="29dp"
        android:text="@string/gender"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="51dp"
        android:text="@string/age"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="73dp"
        android:text="@string/weight"
        android:textSize="12sp" />

    <Button
        android:id="@+id/runButton"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="652dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/runner" />
</RelativeLayout>

