<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/geometric_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <!-- Login progress -->
    <Button
        android:id="@+id/regButton"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="55dp"
        android:background="@color/signup_button_background"
        android:text="First time? Register HERE" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserName"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="@android:color/black"
        android:text="@string/title_activity_login"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="275dp"
        android:layout_height="261dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="97dp"
        app:srcCompat="@drawable/adidas_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="87dp"
        android:layout_marginRight="97dp" />

</RelativeLayout>